links are now a table. added padding to nav. reduced padding on mobile for main title. add class to stop specific boxes moving

--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ footer {
 }
 
 .navbar {
-    padding-top: 0.5rem;
+    padding-top: 0.75rem;
     border-bottom: 1px solid rgba(255,255,255,0.1);
 }
 
@@ -95,6 +95,10 @@ footer {
 
 .box:hover {
     transform: scale3d(1.01, 1.01, 1);
+}
+
+.x:hover {
+    transform: none;
 }
 
 /* for centering images */
